# federated_adaptive_learning_using_nist

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
code/: 10min_data_prepration_using_generated_lables.ipynb  aggregated_results.csv  full_download_and_prepare_nist_dataset.ipynb  init_env.py  step1_global_model_trianing.ipynb  step2_combined_model_training.ipynb  step3_fl_base_training.ipynb  step4_all_aggregations_methods.ipynb  step5_regularization_methods.ipynb  step6_extreme_cases.ipynb
results/: all_agg_heatmap.py  global_clients_model  global_model  heatmap_grids.py  heatmap_label.py  results_plots.py  top_5_selector.py  trianing_plot.py  writer_split.json
results/all_aggs_fl_BaseTrainer_grid_search/: analyze_learnings.py  heatmap.py  overlay_plots.py  senario_plots.py
results/final_result_CFAlignedFeatureTrainer_grid_search/: overlay_plots.py  senario_plots.py  test.py  tets2.py  tets3.py
results/final_result_DistillationTrainer_grid_search/: heat_map_min_max.py  overlay_plots.py
results/global_clients_results/: global_clients_all_outliers_metrics.json  global_clients_global_metrics.json
results/global_results/: global_metrics.json
results/logit_consistency_grid_search/: generate_grid_heatmp.py
results/outliers/: clients_acc_on_global.json  selected_outliers.json  test.py
results/prove_fl_BaseTrainer_grid_search/: overlay_plots.py
results/single_outlier_final_results_final_DistillationTrainer_grid_search/: overlay_plots.py
src/federated_adaptive_learning_nist/: constants.py  data_utils.py  label_generation.py  model.py  nist_logger.py  (+4 more)
(+346 files in other folders)
